<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_material_dark"
    android:id="@+id/fragment1"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="#FFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfil_text_inici"
            android:id="@+id/textView1"
            android:layout_marginTop="39dp"
            android:textSize="18dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="207dp"
            android:layout_height="40dp"
            android:id="@+id/user"
            android:background="#FFF"
            android:textColor="#000"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="168dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3" />

        <EditText
            android:layout_width="207dp"
            android:layout_height="40dp"
            android:id="@+id/password"
            android:background="#FFF"
            android:textColor="#000"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/user"
            android:layout_alignStart="@+id/user"
            android:password="true" />
        <TextView
            android:textColor="#FFF"
            android:layout_width="67dp"
            android:layout_height="56dp"
            android:text="@string/perfil_user"
            android:id="@+id/textView3"
            android:textSize="18dp"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_alignTop="@+id/user"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <TextView
            android:textColor="#FFF"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/perfil_text_register"
            android:id="@+id/textView6"
            android:textSize="18dp"
            android:layout_marginTop="49dp"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4" />
        <TextView
            android:textColor="#FFF"
            android:layout_width="67dp"
            android:layout_height="56dp"
            android:text="@string/perfil_password"
            android:layout_gravity="left|top"
            android:id="@+id/textView4"
            android:textSize="18dp"
            android:layout_alignTop="@+id/password"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_toLeftOf="@+id/password"
            android:layout_toStartOf="@+id/password" />

        <TextView
            android:textColor="#0d18f3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil_register"
            android:id="@+id/textView5"
            android:onClick="register"
            android:clickable="true"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


</FrameLayout>